[gd_scene load_steps=28 format=3 uid="uid://dv6op5652dni4"]

[ext_resource type="Theme" uid="uid://djs6o2b5hx67f" path="res://assets/themes/game_ui.tres" id="1_fgkus"]
[ext_resource type="Script" uid="uid://48bq1r0uc88p" path="res://scripts/tile_scene.gd" id="2_dc4i4"]
[ext_resource type="Script" uid="uid://pxqgq757nd1m" path="res://scripts/title_screen.gd" id="2_sa3yf"]
[ext_resource type="PackedScene" uid="uid://cfxkdmxms47s8" path="res://scenes/tiles/house.tscn" id="3_e54dn"]
[ext_resource type="PackedScene" uid="uid://cpi5xw7k5r43u" path="res://scenes/components/trash_scatterer.tscn" id="4_3yumr"]
[ext_resource type="Script" uid="uid://cfie4dfqslqft" path="res://scripts/ui/credits_links.gd" id="6_e54dn"]
[ext_resource type="Texture2D" uid="uid://ihf752w5ge7l" path="res://assets/trash_icons/cardboard_small_0.png" id="6_tklts"]
[ext_resource type="Texture2D" uid="uid://brudptmc303i6" path="res://assets/trash_icons/tall_can_1.png" id="7_u26n3"]
[ext_resource type="Texture2D" uid="uid://cqbxmadxbid0r" path="res://assets/trash_icons/water_small_0.png" id="8_ib7db"]
[ext_resource type="Texture2D" uid="uid://r62g873km48i" path="res://assets/trash_icons/burg_bottle_0.png" id="9_frs5l"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_s4lrb"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_s2r40"]
sky_material = SubResource("ProceduralSkyMaterial_s4lrb")

[sub_resource type="Environment" id="Environment_mgrm8"]
background_mode = 2
sky = SubResource("Sky_s2r40")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_nhbjo"]
size = Vector3(100, 2, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5yohy"]
albedo_color = Color(0.635294, 0.662745, 0.278431, 1)

[sub_resource type="BoxMesh" id="BoxMesh_umucm"]
material = SubResource("StandardMaterial3D_5yohy")
size = Vector3(40, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nhbjo"]
albedo_color = Color(0.192157, 0.211765, 0.219608, 1)

[sub_resource type="BoxMesh" id="BoxMesh_fegyf"]
material = SubResource("StandardMaterial3D_nhbjo")
size = Vector3(13, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5781l"]
albedo_color = Color(0.698039, 0.729412, 0.564706, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qutkw"]
material = SubResource("StandardMaterial3D_5781l")
size = Vector3(3.5, 1, 100)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dc4i4"]
content_margin_top = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e54dn"]
content_margin_left = 16.0

[sub_resource type="Animation" id="Animation_e54dn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("titleMargin/titleVbox/titleLabel:theme_override_styles/normal:content_margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("transitionRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("bedRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("bedRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3yumr"]
resource_name = "idle_menu"
length = 3.0
loop_mode = 2
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("titleMargin/titleVbox/titleLabel:theme_override_styles/normal:content_margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [0.0, 72.0]
}

[sub_resource type="Animation" id="Animation_dc4i4"]
resource_name = "load_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transitionRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cs5ya"]
resource_name = "to_bed"
length = 2.0
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bedRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bedRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e54dn"]
_data = {
&"RESET": SubResource("Animation_e54dn"),
&"idle_menu": SubResource("Animation_3yumr"),
&"load_menu": SubResource("Animation_dc4i4"),
&"to_bed": SubResource("Animation_cs5ya")
}

[node name="titleScreen" type="Node3D"]
script = ExtResource("2_sa3yf")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mgrm8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.570315, -0.755405, 0.322651, -0.402828, 0.599522, 0.691594, -0.71587, 0.264454, -0.646215, 0, 0, 0)
shadow_enabled = true

[node name="roadLTile" type="Node3D" parent="."]
script = ExtResource("2_dc4i4")

[node name="groundBody" type="StaticBody3D" parent="roadLTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_mask = 0

[node name="groundCol" type="CollisionShape3D" parent="roadLTile/groundBody"]
visible = false
shape = SubResource("BoxShape3D_nhbjo")

[node name="grassMesh" type="MeshInstance3D" parent="roadLTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, -0.5, 0)
mesh = SubResource("BoxMesh_umucm")

[node name="grassMesh2" type="MeshInstance3D" parent="roadLTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, -0.5, 0)
mesh = SubResource("BoxMesh_umucm")

[node name="roadMesh" type="MeshInstance3D" parent="roadLTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_fegyf")

[node name="sidewalkMesh" type="MeshInstance3D" parent="roadLTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.25, -0.5, 0)
mesh = SubResource("BoxMesh_qutkw")

[node name="sidewalkMesh2" type="MeshInstance3D" parent="roadLTile"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.25, -0.5, 0)
mesh = SubResource("BoxMesh_qutkw")

[node name="houses" type="Node3D" parent="roadLTile"]

[node name="house" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 30, 0, -37.5)

[node name="house2" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 30, 0, -12.5)

[node name="house3" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 30, 0, 12.5)

[node name="house4" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 30, 0, 37.5)

[node name="house5" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, 37.5)

[node name="house6" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, 12.5)

[node name="house7" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, -12.5)

[node name="house8" parent="roadLTile/houses" instance=ExtResource("3_e54dn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 0, -37.5)

[node name="trashScatterer" parent="roadLTile" instance=ExtResource("4_3yumr")]
valid_rects = Array[Rect2]([Rect2(-50, -50, 100, 100)])
num_trash = 150
miss_chances = 25
trash_dist = {
0: 2.0,
1: 2.0,
2: 1.0,
3: 1.0
}

[node name="rockBeds" type="Node3D" parent="roadLTile"]

[node name="cars" type="Node3D" parent="roadLTile"]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 5, 12)
fov = 40.0

[node name="titleUI" type="CanvasLayer" parent="."]

[node name="titleMargin" type="MarginContainer" parent="titleUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_fgkus")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="titleVbox" type="VBoxContainer" parent="titleUI/titleMargin"]
layout_mode = 2

[node name="spacer" type="Control" parent="titleUI/titleMargin/titleVbox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
mouse_filter = 2

[node name="titleLabel" type="Label" parent="titleUI/titleMargin/titleVbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
theme_override_styles/normal = SubResource("StyleBoxEmpty_dc4i4")
text = "LITTER PICKER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttonVbox" type="VBoxContainer" parent="titleUI/titleMargin"]
layout_mode = 2
alignment = 2

[node name="playButton" type="Button" parent="titleUI/titleMargin/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "PLAY"

[node name="howButton" type="Button" parent="titleUI/titleMargin/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "HOW TO PLAY"

[node name="creditsButton" type="Button" parent="titleUI/titleMargin/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "CREDITS"

[node name="settingsButton" type="Button" parent="titleUI/titleMargin/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "SETTINGS"

[node name="spacer" type="Control" parent="titleUI/titleMargin/buttonVbox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
mouse_filter = 2

[node name="quitButton" type="Button" parent="titleUI/titleMargin/buttonVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="howVbox" type="VBoxContainer" parent="titleUI/titleMargin"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="howLabel" type="Label" parent="titleUI/titleMargin/howVbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "COLLECT TRASH TO EARN CREDITS
PAPER: $2  -  PLASTIC: $5  -  METAL: $10  -  GLASS: $15

HOLD [C] WHILE LITTER PICKING TO LEAVE EARLY

SPEND CREDITS ON TOOLS AND TOYS
TOOLS: USED TO COLLECT TRASH  -  TOYS: GIVE SPECIAL PERKS

EARN 1000 CREDITS AND PURCHASE THE \"SCHLADEEM\" TOY,
YOUR FAVORITE ACTION FIGURE"
horizontal_alignment = 1

[node name="leftTrash" type="VBoxContainer" parent="titleUI/titleMargin/howVbox/howLabel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/separation = 8

[node name="leftTrash" type="TextureRect" parent="titleUI/titleMargin/howVbox/howLabel/leftTrash"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_tklts")
expand_mode = 3
stretch_mode = 5

[node name="leftTrash2" type="TextureRect" parent="titleUI/titleMargin/howVbox/howLabel/leftTrash"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("7_u26n3")
expand_mode = 3
stretch_mode = 5

[node name="rightTrash" type="VBoxContainer" parent="titleUI/titleMargin/howVbox/howLabel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 8

[node name="rightTrash" type="TextureRect" parent="titleUI/titleMargin/howVbox/howLabel/rightTrash"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("8_ib7db")
expand_mode = 3
stretch_mode = 5

[node name="rightTrash2" type="TextureRect" parent="titleUI/titleMargin/howVbox/howLabel/rightTrash"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("9_frs5l")
expand_mode = 3
stretch_mode = 5

[node name="spacer" type="Control" parent="titleUI/titleMargin/howVbox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2

[node name="quitButton" type="Button" parent="titleUI/titleMargin/howVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="creditsVbox" type="VBoxContainer" parent="titleUI/titleMargin"]
visible = false
layout_mode = 2
alignment = 2
script = ExtResource("6_e54dn")

[node name="spacer" type="Control" parent="titleUI/titleMargin/creditsVbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="scrollMargin" type="MarginContainer" parent="titleUI/titleMargin/creditsVbox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 196
theme_override_constants/margin_right = 196

[node name="creditsScroll" type="ScrollContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_e54dn")

[node name="scrollVbox" type="VBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="meVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="colbyLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/meVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "GAME DESIGN, 
PROGRAMMING, 
MODELING, 
AUDIO & UI: "

[node name="colbyRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/meVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://birdboys.itch.io/\"]Colby Bird[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="figureVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="figureLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/figureVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "\"ACTION-THEM\" MODEL:"

[node name="fontsRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/figureVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://www.youtube.com/@wyzegye\"]WyzeGye[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="musicVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="musicLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/musicVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "MUSIC:"

[node name="musicRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/musicVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://soundcloud.com/drsanic\"]Kyro[/url]
[url=\"https://www.youtube.com/@wyzegye\"]WyzeGye[/url]
[url=\"https://open.spotify.com/artist/3GpJaMiYj3MlsnDtMx4r8J?si=LQh3uNweTIqG9yNyckrQKw\"]Esai Vargas[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="paletteVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="paletteLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/paletteVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "COLOR PALETTE: "

[node name="paletteRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/paletteVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://lospec.com/palette-list/resurrect-64\"]Resurrect 64[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="fontVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="fontsLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/fontVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "FONTS: "

[node name="fontsRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/fontVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://fonts.google.com/specimen/Chewy\"]Chewy[/url]
[url=\"https://fonts.google.com/specimen/Permanent+Marker\"]Permanent Marker[/url]
[url=\"https://fonts.google.com/specimen/Rum+Raisin\"]Rum Raisin[/url]
[url=\"https://fonts.google.com/specimen/Tektur\"]Tektur[/url]"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="modelVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="modelLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/modelVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "MODEL SYNTHESIS
ALGORITHM:"

[node name="modelRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/modelVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://paulmerrell.org/model-synthesis/\"]Paul Merrell[/url]
"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="wfcVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="wfcLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/wfcVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "WAVE FUNCTION
COLLAPSE ALGORITHM:"

[node name="wfcRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/wfcVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[url=\"https://github.com/mxgmn/WaveFunctionCollapse\"]Maxim Gumin[/url]
"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="testingVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="testingLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/testingVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "TESTING:"

[node name="fontsRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/testingVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Friends and Family"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="playerVbox" type="HBoxContainer" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="playerLabel" type="Label" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/playerVbox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 5
theme_override_font_sizes/font_size = 48
text = "PLAYER:"

[node name="fontsRichLabel" type="RichTextLabel" parent="titleUI/titleMargin/creditsVbox/scrollMargin/creditsScroll/scrollVbox/playerVbox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "YOU (TY FOR PLAYING)"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 2

[node name="spacer2" type="Control" parent="titleUI/titleMargin/creditsVbox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2

[node name="backButton" type="Button" parent="titleUI/titleMargin/creditsVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="settingsVbox" type="VBoxContainer" parent="titleUI/titleMargin"]
visible = false
layout_mode = 2

[node name="mainVbox" type="VBoxContainer" parent="titleUI/titleMargin/settingsVbox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="musicSlider" type="HBoxContainer" parent="titleUI/titleMargin/settingsVbox/mainVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="sliderLabel" type="Label" parent="titleUI/titleMargin/settingsVbox/mainVbox/musicSlider"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "MUSIC:"

[node name="musicSlider" type="HSlider" parent="titleUI/titleMargin/settingsVbox/mainVbox/musicSlider"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="soundSlider" type="HBoxContainer" parent="titleUI/titleMargin/settingsVbox/mainVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="sliderLabel" type="Label" parent="titleUI/titleMargin/settingsVbox/mainVbox/soundSlider"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "SOUND:"

[node name="soundSlider" type="HSlider" parent="titleUI/titleMargin/settingsVbox/mainVbox/soundSlider"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="spacer" type="Control" parent="titleUI/titleMargin/settingsVbox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2

[node name="backButton" type="Button" parent="titleUI/titleMargin/settingsVbox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="resetButton" type="Button" parent="titleUI/titleMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 32
text = "RESET"

[node name="transitionRect" type="ColorRect" parent="titleUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.568627, 0.858824, 0.411765, 1)

[node name="bedRect" type="ColorRect" parent="titleUI"]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_fgkus")
color = Color(0, 0, 0, 1)

[node name="endLabel" type="Label" parent="titleUI/bedRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 96
text = "HEADING
HOME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="uiAnim" type="AnimationPlayer" parent="titleUI"]
libraries = {
&"": SubResource("AnimationLibrary_e54dn")
}
